--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 sufficient information to be able to assist with data management issues in 
                 general and specifically with data publication.
               </p>
-              <p class="toc_title"><h2>Contents</h2>
+              <p><h2>Contents</h2>
                 <ul class="toc_list">
                   <li><a href="#Get_started">Get started</a></li>
                   <li><a href="#Orientation">Orientation</a></li>
@@ -45,7 +45,7 @@
                   <li><a href="#How_to_collaborate">How to collaborate</a></li>
                 </ul>
               </p>
-              <h2 id="#Get_started">Get started</h2>
+              <h2 id="Get_started">Get started</h2>
               <p>
                 <ul>
                   <li>Click on <code>Projects</code> in left-hand margin </li>
@@ -62,7 +62,7 @@
                 </ul>
               </p>
 
-              <h2 id="#Orientation">Orientation</h2>
+              <h2 id="Orientation">Orientation</h2>
               <img src="./menu-navigation.jpg" alt="menu-navigation_image"><br>
               <p>
                 <ul>
@@ -76,7 +76,7 @@
                 
                 </ul>
               </p>
-              <h2 id="#Fill_the_checklist">Fill the checklist</h2>
+              <h2 id="Fill_the_checklist">Fill the checklist</h2>
               <p>
                 The DSW provides a filtering feature that allows you to see questions relevant only 
                 to a particular phase of a research project. 
@@ -101,7 +101,7 @@
                 chapter has been answered, this chapter becomes ticked in the Chapters overview, instead of 
                 showing the number of questions that should be answered.
               </p>
-              <h2 id="#Add_a_TODO">Add a TODO</h2>
+              <h2 id="Add_a_TODO">Add a TODO</h2>
               <p>
                 The tool has a TODO function, which lets you mark questions where an action is necessary.
                 <ul>
@@ -114,7 +114,7 @@
                   <br><img src="./todo-navigation.jpg" alt="todo_navigation_image">
                 </ul>
               </p>
-              <h2 id="#Create_a_document_file">Create a document file</h2>
+              <h2 id="Create_a_document_file">Create a document file</h2>
               <p>
                 When the questions are answered you can create a document with your answers, and download it to 
                 your computer.
@@ -135,7 +135,7 @@
                       <br><img src="./document-download.jpg" alt="document-download_image">
                 </ul>
               </p>
-              <h2 id="#How_to_collaborate">How to collaborate</h2>
+              <h2 id="How_to_collaborate">How to collaborate</h2>
               <p>
                 There might be situations where one might want to share a link to your checklist:
                 <ul>
